--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,17 +3,25 @@
 @tailwind utilities;
 @tailwindcss /forms;
 
-
 ::-webkit-scrollbar {
-    width: 4px;
-    cursor: pointer;
+  width: 4px;
+  cursor: pointer;
+}
 
-}
 ::-webkit-scrollbar-track {
-    background-color: rgba(23, 23, 23, var(--bg-opacity));
-    cursor: pointer;
+  background-color: rgba(23, 23, 23, var(--bg-opacity));
+  cursor: pointer;
 }
+
 ::-webkit-scrollbar-thumb {
-    cursor: pointer;
-    background-color: #737373;
+  cursor: pointer;
+  background-color: #737373;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='2' stroke='currentColor' class='w-7 h-7'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M6 18L18 6M6 6l12 12' /%3E%3C/svg%3E%0A");
 }
