--- a/src/assets/styles/cmdk.css
+++ b/src/assets/styles/cmdk.css
@@ -3,7 +3,14 @@
         --modal-backdrop-background-color: rgb(0 0 0/0.25);
         --modal-box-shadow: 0px 8px 25px rgb(43 41 46 / 10%);
         --modal-background: #ffffff;
-        --modal-header-color: #2b292e;
+        --backdrop-filter: blur(33px);
+        --modal-box-shadow: none;
+        --primary-text-color: rgb(55 65 81);
+        --secondary-text-color: #bdbdbd;
+        --footer-background: #EEEEEF;
+        --kbd-background: rgb(242, 242, 242, 0.2);
+        --border-color: none;
+        --scroll-bg: rgba(0, 0, 0, 0.30);
     }
 }
 
@@ -11,7 +18,6 @@
     #favbox-browser-extension-v2 {
         --modal-backdrop-background-color: rgb(0 0 0/0.25);
         --modal-background: rgba(24, 24, 24, 0.60);
-        --modal-header-color: #2b292e;
         --backdrop-filter: blur(33px);
         --modal-box-shadow: 0px 24px 60px 0px rgba(0, 0, 0, 0.46), 0px 7.5px 18px 0px rgba(0, 0, 0, 0.50), 0px 0px 0px 0.75px #000;
         --primary-text-color: #F2F2F2;
@@ -19,6 +25,28 @@
         --footer-background: linear-gradient(90deg, rgba(0, 0, 0, 0.30) 0%, rgba(0, 0, 0, 0.20) 100%);
         --kbd-background: rgb(242, 242, 242, 0.2);
         --border-color: rgb(0 0 0 / 13%);
+        --scroll-bg: rgba(0, 0, 0, 0.30);
+    }
+
+    #favbox-browser-extension-v2 ::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+    }
+
+    #favbox-browser-extension-v2 ::-webkit-scrollbar-thumb {
+        background: var(--scroll-bg);
+        border-right: 0px var(--scroll-bg) solid;
+        background-clip: padding-box;
+        border-radius: 4px;
+    }
+
+    #favbox-browser-extension-v2 ::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    #favbox-browser-extension-v2 ::-webkit-scrollbar-thumb:hover {
+        background: transparent;
+        border: 4px solid var(--scroll-bg);
     }
 }
 
