--- a/src/assets/styles/cmdk.css
+++ b/src/assets/styles/cmdk.css
@@ -1,22 +1,43 @@
 @media (prefers-color-scheme: light) {
     #favbox-browser-extension-v2 {
-        --modal-backdrop-background-color: rgb(0 0 0/0.25);
-        --modal-box-shadow: 0px 8px 25px rgb(43 41 46 / 10%);
-        --modal-background: #ffffff;
+        --modal-backdrop-background-color: none;
+        --modal-background: rgb(255 255 255 / 81%);
         --backdrop-filter: blur(33px);
-        --modal-box-shadow: none;
+        --modal-box-shadow: 0px 16px 40px 0px rgba(0, 0, 0, 0.46), 0px 5px 12px 0px rgba(0, 0, 0, 0.50), 0px 0px 0px 0.5px #f1f1f1;
         --primary-text-color: rgb(55 65 81);
         --secondary-text-color: #bdbdbd;
         --footer-background: #EEEEEF;
-        --kbd-background: rgb(242, 242, 242, 0.2);
+        --kbd-background: rgb(181 181 181 / 20%);
         --border-color: none;
-        --scroll-bg: rgba(0, 0, 0, 0.30);
+        --scroll-bg: rgb(218, 218, 218);
+        --selected-item: rgb(238 238 239 / 55%);
+    }
+
+    #favbox-browser-extension-v2 ::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+    }
+
+    #favbox-browser-extension-v2 ::-webkit-scrollbar-thumb {
+        background: var(--scroll-bg);
+        border-right: 0px var(--scroll-bg) solid;
+        background-clip: padding-box;
+        border-radius: 4px;
+    }
+
+    #favbox-browser-extension-v2 ::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    #favbox-browser-extension-v2 ::-webkit-scrollbar-thumb:hover {
+        background: transparent;
+        border: 4px solid var(--scroll-bg);
     }
 }
 
 @media (prefers-color-scheme: dark) {
     #favbox-browser-extension-v2 {
-        --modal-backdrop-background-color: rgb(0 0 0/0.25);
+        --modal-backdrop-background-color: none;
         --modal-background: rgba(24, 24, 24, 0.60);
         --backdrop-filter: blur(33px);
         --modal-box-shadow: 0px 24px 60px 0px rgba(0, 0, 0, 0.46), 0px 7.5px 18px 0px rgba(0, 0, 0, 0.50), 0px 0px 0px 0.75px #000;
@@ -26,6 +47,7 @@
         --kbd-background: rgb(242, 242, 242, 0.2);
         --border-color: rgb(0 0 0 / 13%);
         --scroll-bg: rgba(0, 0, 0, 0.30);
+        --selected-item: rgb(0 0 0 / 31%);
     }
 
     #favbox-browser-extension-v2 ::-webkit-scrollbar {
@@ -75,7 +97,7 @@
 }
 
 .list-container {
-    height: 65%;
+    height: 70%;
     overflow: auto;
     -ms-scroll-chaining: none;
     overscroll-behavior: contain;
@@ -96,12 +118,12 @@
     content-visibility: auto;
     cursor: pointer;
     height: 40px;
-    border-radius: 8px;
+    border-radius: 5px;
     font-size: 14px;
     display: flex;
     align-items: center;
     gap: 8px;
-    padding: 0 5px;
+    padding: 0 10px 0px 10px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -113,7 +135,12 @@
 
 #favbox-browser-extension-v2 ul li:active {
     transition-property: background;
-    background: red;
+    background: var(--selected-item);
+}
+
+#favbox-browser-extension-v2 ul li.active {
+    transition-property: background;
+    background: var(--selected-item);
 }
 
 #favbox-browser-extension-v2 hr {
@@ -128,14 +155,14 @@
     display: flex;
     height: 40px;
     align-items: center;
-    justify-content: flex-end;
+    place-content: space-between;
     width: 100%;
     position: absolute;
     opacity: 1;
     background: var(--footer-background);
-    bottom: 0;
+    bottom: 0px;
     border-top: 1px solid var(--border-color);
-    border-radius: 0 0 10px 10px;
+    border-radius: 0px 0px 10px 10px;
     gap: 3px;
 }
 
@@ -144,6 +171,7 @@
     align-items: center;
     margin-right: 10px;
     gap: 5px;
+    margin-left: auto;
 }
 
 .empty {
@@ -170,7 +198,7 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    z-index: 1000;
+    z-index: 99999999;
     top: 0;
     left: 0;
     width: 100%;
@@ -196,7 +224,7 @@
     outline: none;
     color: var(--primary-text-color);
     background: transparent;
-    padding: 0px 10px 0px 10px;
+    padding: 0px 15px 0px 15px;
 }
 
 .search-container input::placeholder {
