ui/ux updates, ff fixes

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -16,7 +16,5 @@
 
 ::-webkit-scrollbar-thumb {
   cursor: pointer;
-  background-color: #000;
-  border-radius: 2px;
+  background-color: #585858
 }
-
